--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ a {
     width: 100%;
     margin-top: 0px;
     height: 100vh;
-    background: url(https://i.ibb.co/cbhVrtZ/desktop-wallpaper-now-this-we-call-men-johnny-sins.jpg);
+    background: url(https://i.ibb.co/Tt8fGrQ/images-11.jpg);
     background-size: cover;
     color: white;
 }
@@ -82,23 +82,24 @@ nav ul li a:hover:after {
 }
 .content .title {
     color: #0a0a0a;
-    font-size: 15px;
+    font-weight: bolder;
+    font-size: 25px;
     text-transform: uppercase;
     letter-spacing: 4px;
     display: inline-block;
     margin-bottom: 20px;
     background: linear-gradient(
         120deg,
-        #1c99fe 20.69%,
-        #7644ff 50.19%,
-        #fd4766 79.69%
+        #080808 20.69%,
+        #93B22E 50.19%,
+        #7E10D0 79.69%
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 .content h1 {
     color: #1f1f25;
-    font-size: 75px;
+    font-size: 40px;
     font-weight: 900;
     line-height: 90px;
     text-transform: inherit;
