--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 * {
     margin: 0;
@@ -84,23 +85,24 @@ nav ul li a:hover:after {
     font-weight: bolder;
     font-size: 25px;
     text-transform: uppercase;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
     display: inline-block;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     background: linear-gradient(
         120deg,
-        #080808 20.69%,
-        #93B22E 50.19%,
-        #7E10D0 79.69%
+        #B9A22F 20.69%,
+        #CCBB13 50.19%,
+        #FFFFFF 79.69%
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 .content h1 {
-    color: #1f1f25;
+    color: #B89A29;
     font-size: 40px;
     font-weight: 900;
-    line-height: 90px;
+    line-height: 50px;
+    font-style: italic;
     text-transform: inherit;
     width: 70%;
 }
