--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ a {
     width: 100%;
     margin-top: 0px;
     height: 100vh;
-    background: url(https://i.ibb.co/Tt8fGrQ/images-11.jpg);
+    background: url(https://i.ibb.co/cc91q3B/desktop-wallpaper-now-this-we-call-men-johnny-sins.jpg);
     background-size: cover;
     color: white;
 }
